# robotics-motion-control-lab

./: README.md
control/EKF/: EKF.py  controller.py  main.py  models.py  plotting.py  robot_model.py  simulation.py
control/Proportional_Control/: controller.py  main.py  plotting.py  robot_model.py  simulation.py
motion_planning/Lattice_based_A_motion_planner/: main.py  motion_primitives.py
planning/: A_star.py  PRM.py  RRT.py  RRT_star.py
projects/mpc_f1_racing/: .gitignore  pyproject.toml
projects/mpc_f1_racing/competition_pack/: aragon_par_mpc .yaml  catalunya_par_mpc.yaml  compare_racelines.py  free_practice.py  montecarlo_par_mpc.yaml  oval_par_mpc .yaml
projects/mpc_f1_racing/racing/car_models/: bugatti.yaml  ferrari.yaml  friction_coefficient.txt  lamborghini.yaml  tesla.yaml
projects/mpc_f1_racing/racing/maps/arrays/: aragon.yaml  assen.yaml  catalunya.yaml  jose_carlos.yaml  montecarlo.yaml  mugello.yaml  oval.yaml  test1.yaml  test2.yaml
projects/mpc_f1_racing/racing/maps/scripts/: aragon.py  assen.py  catalunya.py  jose_carlos.py  montecarlo.py  mugello.py  oval.py  test1.py  test2.py
projects/mpc_f1_racing/racing/models/: __init__.py  kinematic_bicycle.py
projects/mpc_f1_racing/racing/mpc/: lqr_terminal.py  mpc.py
projects/mpc_f1_racing/racing/racetrack/: __init__.py  grad_prix.py  raceline_optimization.py  racetrack.py  utils.py
