[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "racing"
version = "0.0"
authors = [
  {name = "Gregorio Marchesini", email = "gremar@kth.se"},
]
readme = "README.md"
dependencies = [
  "numpy",
  "casadi",
  "cvxpy[mosek]",
  "matplotlib",
  "pyyaml",
  "scipy",
  "cvxpy[mosek]",
  "pyyaml"
]

[tool.setuptools]
packages = ["racing"]